Create basic light/dark switcher

--- a/LightDarkSwitcher/index.html
+++ b/LightDarkSwitcher/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a96a8f05a6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Light Dark Switcher</title>
 </head>
-<body>
+<body class="light">
     <main>
-        <p><a href="/index.html">Home Page</a></p>
+        <p><a href="/index.html">Home page</a></p>
+        <h2>Light Dark Switcher</h2>
+        <button id="toggle"><i id="icon" class="fa-solid fa-moon"></i></button>
     </main>
+    <script src="index.js"></script>
 </body>
 </html>
