--- a/LightDarkSwitcher/index.html
+++ b/LightDarkSwitcher/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Light Dark Switcher</title>
 </head>
-<body class="light">
+<body class="">
     <main>
         <p><a href="/index.html">Home page</a></p>
         <h2>Light Dark Switcher</h2>
