Create card creator page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>A project to refresh my HTML, CSS and vanilla JS basics.</p>
         <ul>
             <li><a href="./LightDarkSwitcher">Button that switches between light and dark mode</a></li>
+            <li><a href="./CardCreator">Button that creates "cards"</a></li>
         </ul>
     </main>
 </body>
