Create basic card deleter

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="./LightDarkSwitcher">Button that switches between light and dark mode</a></li>
             <li><a href="./CardCreator">Button that creates "cards"</a></li>
+            <li><a href="./CardDeleter">Button that deletes "cards"</a></li>
         </ul>
     </main>
 </body>
