Update card creator to use HTML template

--- a/CardCreator/index.html
+++ b/CardCreator/index.html
@@ -14,6 +14,12 @@
         <button id="add-card"><i class="fa-solid fa-plus"></i></button>
     </header>
     <div id="card-area">
+        <template id="card">
+            <div class="card">
+                <h3></h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, odit!</p>
+            </div>
+        </template>
 
     </div>
     <script src="index.js"></script>
