--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="./LightDarkSwitcher">Button that switches between light and dark mode</a></li>
             <li><a href="./CardCreator">Button that creates "cards"</a></li>
             <li><a href="./CardDeleter">Button that deletes "cards"</a></li>
+            <li><a href="./BasicTodo/">Basic todo list</a></li>
         </ul>
     </main>
 </body>
