Minor edits to readme and index

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <main>
         <h1>Vanilla Web Basics</h1>
         <p>A project to refresh my HTML, CSS and vanilla JS basics.</p>
-        <ul>
+        <p>Listed in order of creation</p>
+        <ol>
             <li><a href="./LightDarkSwitcher">Button that switches between light and dark mode</a></li>
             <li><a href="./CardCreator">Button that creates "cards"</a></li>
             <li><a href="./CardDeleter">Button that deletes "cards"</a></li>
             <li><a href="./BasicTodo/">Basic todo list</a></li>
-        </ul>
+        </ol>
     </main>
 </body>
 </html>
