BasicModal has basic functionality

--- a/BasicModal/index.html
+++ b/BasicModal/index.html
@@ -12,6 +12,15 @@
     <header>
         <h1>Basic Modal</h1>
     </header>
+    <main>
+        <button id="hello-creator">Create hello world modal</button>
+        <dialog id="helloworld">
+            <p>Hello World!</p>
+            <form method="dialog">
+                <button>OK</button>
+            </form>
+        </dialog>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
