--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="./CardCreator">Button that creates "cards"</a></li>
             <li><a href="./CardDeleter">Button that deletes "cards"</a></li>
             <li><a href="./BasicTodo/">Basic todo list</a></li>
+            <li><a href="./BasicModal/">Basic Modal</a></li>
         </ol>
     </main>
 </body>
