Add draggable card using Drag and Drop API

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="./CardDeleter">Button that deletes "cards"</a></li>
             <li><a href="./BasicTodo/">Basic todo list</a></li>
             <li><a href="./BasicModal/">Basic Modal</a></li>
+            <li><a href="./DragDropApi">Drag and Drop API</a></li>
         </ol>
     </main>
 </body>
